# ORTINa

./: LICENSE.txt  README.md
ORTILo/: CMakeLists.txt  package.xml
ORTILo/config/: global_costmap_params.yaml  local_costmap_params.yaml
ORTILo/gazebo_extra_models/extra_ball/: model.sdf
ORTILo/gazebo_extra_models/extra_ball/meshes/: Ball DAE.dae
ORTILo/gazebo_extra_models/extra_baseball_bat/: model.sdf
ORTILo/gazebo_extra_models/extra_bicycle/: model.config  model.sdf
ORTILo/gazebo_extra_models/extra_bicycle/meshes/: 10489_bicycle_L2.dae
ORTILo/gazebo_extra_models/extra_bird1/: model.config
ORTILo/gazebo_extra_models/extra_cat1/: model.config
ORTILo/gazebo_extra_models/extra_cat1/materials/scripts/: extra_cat1.material
ORTILo/gazebo_extra_models/extra_clock_v2/: model.config  model.sdf
ORTILo/gazebo_extra_models/extra_clock_v2/meshes/: clock_dae.dae
ORTILo/gazebo_extra_models/extra_dog_beagle/: model.config
ORTILo/gazebo_extra_models/extra_dog_beagle/meshes/: Beagle.stl
ORTILo/gazebo_extra_models/extra_plant/: model.config  model.sdf
ORTILo/gazebo_extra_models/extra_plant/materials/scripts/: extra_plant.material
ORTILo/gazebo_extra_models/extra_tennis_racket/: model.config
ORTILo/include/ORTILo/: lq_servo.h
ORTILo/launch/: create_worlds.launch  dji_m100_spawn.launch  map_server_init.launch  mapping_process.launch  path_smoothing.launch  simulation.launch  spawn_quadrotor.launch  uwb_anchors_setup.launch
ORTILo/msg/: yolov3_bounding_box.msg  yolov3_bounding_box_vector.msg
ORTILo/rviz_config/: config.rviz
ORTILo/scripts/: kalmanFilter.py  path_plotter.py  uwb_position_estimator.py  yolo_objects_parser.py  yolo_position_estimator.py
ORTILo/src/: path_smoothing_node.cpp  pose_action_client.cpp  pose_action_server.cpp
ORTILo/src/nodes/: lq_servo_node.cpp
ORTINa/: CMakeLists.txt  package.xml
ORTINa/action/: Pose.action
ORTINa/config/: common_costmap_params.yaml
ORTINa/gazebo_extra_models/extra_ball/: model.config
ORTINa/gazebo_extra_models/extra_baseball_bat/: model.config
ORTINa/gazebo_extra_models/extra_baseball_bat/meshes/: baseball_bat.dae
ORTINa/gazebo_extra_models/extra_bird1/: model.sdf
ORTINa/gazebo_extra_models/extra_bird1/meshes/: 12259_Bird_v1_L2.dae
ORTINa/gazebo_extra_models/extra_cat1/: model.sdf
ORTINa/gazebo_extra_models/extra_dog_beagle/: model.sdf
ORTINa/gazebo_extra_models/extra_office_chair_v2/: model.config  model.sdf
ORTINa/gazebo_extra_models/extra_office_chair_v2/meshes/: OfficeChair.dae
ORTINa/gazebo_extra_models/extra_tennis_racket/: model.sdf
ORTINa/gazebo_extra_models/extra_tennis_racket/meshes/: tennis_racket.dae
ORTINa/include/ORTILo/: lq_servo.h
ORTINa/launch/: create_worlds.launch  map_server_init.launch  mapping_process.launch  path_smoothing.launch  simulation.launch  spawn_quadrotor.launch
ORTINa/msg/: ControlVector.msg  StateVector.msg
ORTINa/scripts/: kalmanFilter.py  path_plotter.py  uwb_position_estimator.py  yolo_objects_parser.py  yolo_position_estimator.py
ORTINa/src/: pose_action_client.cpp  pose_action_server.cpp
ORTINa/src/nodes/: lq_servo_node.cpp
ORTINa/worlds/: demo_world.world
(+3 files in other folders)
